2006-12-23  Brandon Hale  <brandon@ubuntu.com>
	
	* src/InfoWindow.cs, src/TagDialog.cs, src/FirstRunDialog.cs:
	Use GTK stock buttons where appropriate.

2006-12-21  Brandon Hale  <brandon@ubuntu.com>

	* data/icons:
	Add 48 and 32 sizes for tag-new and show-icon icons.
	Thanks to Andreas.

2006-12-20  Brandon Hale  <brandon@ubuntu.com>

	* data/icons:
	Add tag-new and show-info themeable actions icons, thanks to Andreas
	Nilsson on bug #384698. Use icon-theme-installer script from Aaron Bockover.
	* data/glade/PlayerWindow.glade, src/PlayerWindow.cs:
	Update player window to use hicolor icons from Andreas

2006-11-23  Brandon Hale  <brandon@ubuntu.com>

	* src/last-exit.exe.config.in:
	Add dllmap entry for dbus-glib-1, bug #356873

	* src/NotificationArea.cs:
	Copy the latest code from Muine to properly support transparent
	panels, bug #365099

	* po/POTFILES.in, src/Defines.cs.in:
	Apply patches from Pritt on bug #365091 to fix things up 
	for translators.

	* data/icons/*:
	Fix for bug #354430, install application icons properly into the icon
	theme. We still need a 32x32 icon for you artists out there.

2006-11-01  Iain Holmes  <iain@gnome.org>

	* src/ImageLoader.cs: Catch bad urls from Priit

2006-10-24  Iain holmes  <iain@gnome.org>

	* liblast-exit/player.c: Patch to stop player on EOS from Priit

2006-10-23  Iain Holmes  <iain@gnome.org>

	* src/PlayerWindow.cs: Patch from Priit Laes to fix Journal URL

2006-08-28  Brandon Hale  <brandon@ubuntu.com>
	
	Call dbus_g_thread_init first thing in Main(), fixing locking issues
	in pre- DBus 0.92

	Patch from Sebastian Dröge:
	Change signature of DBusMessageHandler delegate to (string, string),
	as mashsallying object[] in delegate paramater lists segfaults Mono.

2006-08-27  Brandon Hale  <brandon@ubuntu.com>

	* src/PlayerWindow.cs
	data/ui/TrayIcon.xml:
	Add a Preferences button to the main window where it belongs, remove
	it from the tray menu.

2006-08-21  Iain Holmes  <iain@gnome.org>
